--- a/NIR_UD/templates/NIR_UD/search_results_acper.html
+++ b/NIR_UD/templates/NIR_UD/search_results_acper.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../../../src/static/css/base.css">
 {% endblock %}
 
-{% block name %}<p>Результат поиска</p>{% endblock %}
+{% block name %}<p class="head_name">Результат поиска</p>{% endblock %}
 
 {% block head %}
     {% block search %} {% endblock %}
