--- a/NIR_UD/templates/NIR_UD/teacher_tables.html
+++ b/NIR_UD/templates/NIR_UD/teacher_tables.html
@@ -17,7 +17,7 @@
         </div>
         <hr>
     <div class="container">
-        <a href="AcademicPerfomance.html"><button class="button">Журнал успеваемости</button></a>
+        <a href="{% url 'academic_performance' %}"><button class="button">Журнал успеваемости</button></a>
         <a href="Homework.html"><button class="button">Журнал домашних заданий</button></a>
         <a href="Timetable.html"><button class="button">Расписание учебных занятий</button></a>
         <a href="Students.html"><button class="button">Личные дела учеников</button></a>
