--- a/NIR_UD/templates/NIR_UD/students_tables.html
+++ b/NIR_UD/templates/NIR_UD/students_tables.html
@@ -18,7 +18,7 @@
         <hr>
     <div class="container">
 
-    <a href="AcademicPerfomance.html"><button class="button">Журнал успеваемости</button></a>
+    <a href="{% url 'academic_performance' %}"><button class="button">Журнал успеваемости</button></a>
         <a href="Homework.html"><button class="button">Журнал домашних заданий</button></a>
         <a href="Timetable.html"><button class="button">Расписание учебных занятий</button></a>
         <a href="AverageScore.html"><button class="button">Журнал средних баллов</button></a>
