Починен функционал поиска, создана страница для классов, настроен поиск (осталось прописать запросы к бд).

--- a/NIR_UD/templates/NIR_UD/AcademicPerfomance.html
+++ b/NIR_UD/templates/NIR_UD/AcademicPerfomance.html
@@ -204,6 +204,7 @@
     </div>
     {% block script %}
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        {#    Скрипт для вывода сообщений об ошибках    #}
         <script>
             $(function () {
                 $('.close_alert').click(function () {
