--- a/NIR_UD/templates/NIR_UD/admin_tables.html
+++ b/NIR_UD/templates/NIR_UD/admin_tables.html
@@ -24,7 +24,7 @@
     </div>
         <div class="row2">
             <a href="AcademicSubjects.html"><button class="button">Журнал учебных предметов</button></a>
-            <a href="Classes.html"><button class="button">Журнал классов школы</button></a>
+            <a href="{% url 'classes' %}"><button class="button">Журнал классов школы</button></a>
             <a href="AverageScore.html"><button class="button">Журнал средних баллов</button></a>
             <a href="Teachers.html"><button class="button">Личные дела учителей</button></a>
         </div>
